# gnu_hybrid

./: .bootstrap  .dnt.db  .gitattributes  .gitignore  .todo  AUTHORS  COPYING  Makefile.am  Makefile.sub  Makefile.top  NEWS  THANKS  TODO  bootstrap  bootstrap.aux  configure.ac  configure.ac.in  perl.af
blink/: AUTHORS  (+5 more)
kernel/tools/autotools/m4/: Makefile.am  ax_awk_functionality.m4
src/: Makefile.am  Makefile.def  rules.cfg
src/archs/: Makefile.inc.in  arch.h  linker.h
src/archs/boot/: Makefile.inc.in  bootinfo.c  bootinfo.h  bootmem.c  bootmem.h  bootram.c  bootram.h  bootstrap.c  bootstrap.h  multiboot.c  multiboot.h  option.c  option.h  rules.cfg
src/archs/common/: Makefile.inc.in  asm.h  bcd.h  cpu.c  cpu.h  multiboot.c
src/archs/ia32/: Makefile.inc.in  arch.c  arch.h  asm.c  asm.h  atomic.c  bios.c  bios.h  cmos.c  cpu.c  cpu.h  dma.c  gdt.c  gdt.h  i8237.c  i8237.h  i8253.c  i8259.c  i8259.h  idt.c  idt.h  irq.c  irq.h  isr.S  kernel.ld  kernel.ld.in  rules.cfg  trap.c  trap.h  tsc.c  tsc.h  tss.c  tss.h
src/archs/ia32/boot/: Makefile.inc.in  boot.S  rules.cfg
src/archs/ia32/bsp/: pc.c
src/archs/ia32/cpu/: Makefile.inc.in  amd.c  common.c  generic.c  intel.c
src/archs/ppc32/: Makefile.inc.in  kernel.ld  module.ld.in  rules.cfg
src/archs/x86/: Makefile.inc.in  arch.c  arch.h  asm.c  asm.h  atomic.c  bios.c  bios.h  cmos.c  cmos.h  cpu.c  cpu.h  dma.c  dma.h  gdt.c  gdt.h  i8237.c  i8237.h  i8253.c  i8253.h  i8259.c  i8259.h  idt.c  idt.h  irq.c  irq.h  isr.S  keyboard.h  port.c  port.h  rules.cfg  trap.c  trap.h  tsc.c  tsc.h  tss.c  tss.h
src/boot/: Makefile.inc.in  bootinfo.c  bootinfo.h  bootstrap.c  bootstrap.h  option.c  rules.cfg
src/config/: Makefile.inc.in  autoconfig-tweaks.h  config.h  version.h.in
src/core/: Makefile.inc.in  backtrace.c  backtrace.h  cpu.cxx  cpu.h  delay.cxx  delay.h  dma.cxx  dma.h  grant.cxx  interrupt.c  interrupt.cxx  interrupt.h  log.c  log.cxx  log.h  main.c  main.cxx  module.c  module.h  mutex.c  mutex.cxx  mutex.h  panic.c  power.c  power.cxx  power.h  process.c  process.cxx  process.h  resource.c  resource.cxx  resource.h  rules.cfg  scheduler.c  scheduler.cxx  scheduler.h  semaphore.c  semaphore.cxx  semaphore.h  (+13 more)
src/core/arch/: arch.h
src/core/archs/: Makefile.inc.in  arch.h  linker.h
src/core/bfd/: Makefile.inc.in  bfd.c  bfd.h  dlfnc.h  rules.cfg
src/core/boot/: Makefile.inc.in  bootinfo.c  bootinfo.h  bootstrap.c  bootstrap.h  option.c
src/core/dbg/: Makefile.inc.in  assert.h  backtrace.c  backtrace.h  bug.h  debug.h  morse.c  morse.h  panic.c  panic.h  rules.cfg
src/core/mem/: Makefile.inc.in  address.c  address.cxx  address.h  bss.c  bss.cxx  bss.h  fit.c  fit.cxx  fit.h  heap.c  heap.cxx  heap.h  pmm.c  pmm.cxx  pmm.h  vmm.c  vmm.cxx  vmm.h
src/core/scheduler/: Makefile.inc.in  rules.cfg  scheduler.c  scheduler.h
src/dbg/: Makefile.inc.in  backtrace.c  backtrace.h  builtin-commands.c  builtin-variables.c  commands.c  completion.c  dbg.c  debug.h  debugger.h  gdb.c  gdb.h  history.c  log.c  log.h  panic.c  panic.h  rules.cfg  variables.c
src/devs/: Makefile.inc.in  bus.cxx  bus.h  device.cxx  device.h  rules.cfg
src/drivers/: Makefile.inc.in  bus.cxx  bus.h  device.cxx  device.h  driver.cxx  driver.h  rules.cfg
src/drivers/pci/: Makefile.inc.in  pci.cxx  pci.h  rules.cfg
src/init/: Makefile.inc.in  main.cxx  rules.cfg
src/libs/: Makefile.inc.in  bcd.c  bcd.h  bitmap.c  bitmap.h  debug.h  delay.h  hash.c  hash.h  list.c  list.h  queue.c  queue.h  rules.cfg
src/libs/bfd/: Makefile.inc.in  aout-format.h  aout.c  aout.h  bfd.c  bfd.h  elf-format.h  elf.c  elf.h  rules.cfg
src/mem/: Makefile.inc.in  address.c  address.cxx  address.h  bss.cxx  bss.h  fit.cxx  fit.h  heap.c  heap.cxx  heap.h  pmm.c  pmm.cxx  pmm.h  rules.cfg  vmm.c  vmm.cxx  vmm.h
src/misc/: Makefile.inc.in  grant.cxx  grant.h
tools/autotools/m4/: Makefile.am  ax_gcc_version.m4  ax_gxx_version.m4  ax_split_version.m4  ax_test.m4
tools/blink/src/: Makefile.am  asm.c  asm.h  bootstrap.c  bootstrap.h  compiler.h  config.h.in  dl.c  dl.h  elf.h  heap.c  heap.h  main.c  multiboot.c  panic.c
tools/choose/lkc/: Makefile.am
tools/libs/c/: Makefile.am  fio.c  fio.h  help.c  help.h  log.c  log.h  misc.c  misc.h  test-fio.c  test-misc.c  test.h
tools/scripts/: Makefile.am  Makefile.sub  bin2source.awk.in  bootcheck.awk.in  clhandler.awk.in  elf2symstab.awk.in  getdefine.awk.in  grub-config.sh.in  grub1-config.sh.in  grub2-config.sh.in  guardscheck.awk.in  ifdefscheck.awk.in  includescheck.awk.in  map2ie.awk.in  mergesyms.awk.in  mkbuild.awk.in  mkiso-grub1.sh.in  mkiso-grub2.sh.in  mksyscalls.awk.in  obj2symstab.awk.in  rules2syms.awk.in  sections.awk.in  sh2h.awk.in  stackcheck.awk.in  symstab2map.awk.in  test-clhandler-2  test-guardscheck-6
tools/scripts/dev/: Makefile.am  ifdefscheck.awk.in  includescheck.awk.in  mksyscalls.awk.in  obj2symstab.awk.in  sections.awk.in  stackcheck.awk.in  symstab2map.awk.in
tools/scripts/libs/: Makefile.am
tools/scripts/maint/: Makefile.am  guards_check.pl.in  guardscheck.awk.in  guardscheck.pl.in  test-guards_check-1  test-guards_check-2  test-guards_check-3  test-guards_check-4  test-guards_check-5  test-guards_check-6  test-guardscheck-1  test-guardscheck-2  test-guardscheck-3  test-guardscheck-4  test-guardscheck-5  test-guardscheck-6  test.pl.in
tools/scripts/usr/: Makefile.am  bootcheck.awk.in  bootcheck.sh.in  bootcheck_new.sh.in  clhandler.awk.in  flhandler.sh.in  getdefine.awk.in  getdefine.sh.in  getdefine_new.sh.in  grub1-config.sh.in  grub2-config.sh.in  mergesyms.awk.in  mergesyms.sh.in  mergesyms_new.sh.in  mkbuild.awk.in  mkbuild.sh.in  mkbuild_new.sh.in  mkiso-grub1.sh.in  mkiso-grub2.sh.in  packrules.pl.in  rules2syms.awk.in  rules2syms.sh.in  rules2syms_new.sh.in  sh2h.awk.in  sh2h.sh.in  sh2h_new.sh.in  test-clhandler-1  test-clhandler-3  test-flhandler-1  test-flhandler-2  test-flhandler-3  test-getdefine-1  test-getdefine-2  test-getdefine-3  test-getdefine-4  test-getdefine_new-1  test-mergesyms-1  test-mergesyms-2  test-mergesyms-3  test-mergesyms-4  (+19 more)
(+372 files in other folders)
